2002-07-31  Peter Osterlund  <petero2@telia.com>

	* (defp4cmd): Renamed def-p4-cmd to defp4cmd to make the
	  find-function function recognize it as a function definition.

	* (p4-is-vc): Removed unused variable 'max'.

2002-07-27  Peter Osterlund  <petero2@telia.com>

	* (p4-empty-diff-p): Made non-interactive.

	* (p4-toggle-read-only): Added support for off-line mode, useful
	  when you lose connection to the p4 server or if you want to
	  change a file without letting p4 know.

	* Made loading of vc package optional.

2002-07-26  Rajesh Vaidheeswarran <rv@dsmit.com>

	* (p4-diff-head): New command to diff an (un)opened
	  file against the head revision in the depot.

2002-07-26  Rajesh Vaidheeswarran <rv@dsmit.com>

	* (p4-emacs-version): Minor Release - 10.1

	* (p4-maintainer): Fix email address

	* Patch from  "Paul Krause" <pkrause@soundbite.com>
	    Update all buffers after a check-in without prompting the
	    user yes-or-no for each buffer (a very nice thing when you're
	    checking in 50 files at once).

2002-07-26  Peter Osterlund  <petero2@telia.com>

	* (p4-check-mode): Made it possible to disable the periodic file
	  modification check by setting p4-file-refresh-timer-time to 0.
	  Suggestion from Guenter Radestock.

	* (p4-refresh-files-in-buffers): Made interactive, so that it can
	  be bound to a key sequence, which can be handy if you have
	  disabled the periodic file modification check.

2002-07-26  Rajesh Vaidheeswarran <rv@dsmit.com>

	* (p4-emacs-version): First Sourceforge release - 10.0

	* (p4-maintainer): Change to New sourceforge mailing address

2002-07-26  Peter Osterlund  <petero2@telia.com>

	* (p4-current-client): If the p4-current-client function can't get
	  the current client name from the environment or the $P4CONFIG
	  file, use "p4 info" to retrieve the information. This is slower
	  but more robust, because p4 makes up a default client name from
	  the host name if not defined in the environment. Previously,